# dmx.blog

./: .gitignore  App.toml  Cargo.toml  README.md  articles.json
src/: main.rs
src/lib/: admin.rs  article.rs  config.rs  db.rs  errors.rs  fairings.rs  handlers.rs  mod.rs  refresh.rs  result.rs  tokens.rs  utils.rs
src/templates/: index.html.tera
static/: login.html  new_article.html  unauthorized.html
templates/: article.html.tera  dashboard.html.tera  edit.html.tera  index.html.tera  login.html.tera
