[package]
name = "dmxdotblog"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = [ "now" ] }
cookie = "0.18.1"
jsonwebtoken = "9.3.0"
rocket = { version = "0.5.1", features = [ "secrets" ] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = "0.3.36"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"] 
